@@ -3,6 +3,8 @@
   * get_tmp_dir: New function allowing to set a temporary working directory by
     setting $TMPDIR
 
+  * New archive type 'iso', using bsdtar for data extraction
+
 2.9.2
 
   * set_temp_directories: Improve the generation of the temporary work
